some details 3 Azar 99

--- a/src/app/Layout/all-products/all-products.component.html
+++ b/src/app/Layout/all-products/all-products.component.html
@@ -1,91 +1,140 @@
-<p-dialog [(visible)]="displayBasic" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
+<p-toast position="center"></p-toast>
+<p-dialog  [(visible)]="displayBasic" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
   <p-header>
-    <p class="mr-3">انجام شد</p>
+    <p  class="mr-3">انجام شد</p>
   </p-header>
   <hr style="width: 100%;"/>
   <p class="text-right text-success mt-2">محصول با موفقیت به سبد خرید اضافه شد</p>
-  <p class="text-right textDialog">برای ثبت نهایی سفارش بر روی دکمه ی مشاهده سبد خرید کلیک کنید و برای افزودن دیگر
-    محصولات به سبد خرید، بر روی دکمه ی ادامه کلیک کنید.</p>
+  <p class="text-right textDialog">برای ثبت نهایی سفارش بر روی دکمه ی مشاهده  سبد خرید کلیک کنید و برای افزودن دیگر محصولات به سبد خرید، بر روی دکمه ی ادامه کلیک کنید.</p>
   <hr style="margin-bottom: -15px"/>
-  <ng-template pTemplate="footer">
-    <button pButton pRipple type="button" (click)="displayBasic=false" label="ادامه"
-            class="p-button-danger float-left"></button>
-    <button pButton pRipple type="button" (click)="displayBasic=false" label="مشاهده سبد خرید"
-            class="p-button-danger float-left" routerLink="cart"></button>
+  <ng-template pTemplate="footer" >
+    <button pButton pRipple type="button"  (click)="displayBasic=false" label="ادامه"  class="p-button-danger float-left"></button>
+    <button pButton pRipple type="button"  (click)="goCart()" label="مشاهده سبد خرید"  class="p-button-danger float-left"></button>
+
   </ng-template>
 </p-dialog>
-<p-toast position="center"></p-toast>
-<section class="card-box mt-5">
+<p-dialog  [(visible)]="displayNotProduct" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
+  <p-header>
+    <p  class="mr-3">موجودی کالا</p>
+  </p-header>
+  <hr style="width: 100%;"/>
+  <p class="text-right text-danger mt-2">متاسفانه، کالا موجود نیست</p>
+  <hr style="margin-bottom: -15px"/>
+  <ng-template pTemplate="footer" >
+    <button pButton pRipple type="button"  (click)="displayNotProduct=false" label="ادامه"  class="p-button-danger float-left"></button>
+  </ng-template>
+</p-dialog>
+
+<section class="card-box mt-3">
   <div class="container-fluid" dir="rtl">
     <div class="row justify-content-center">
-      <div class="col col-6 align-items-center">
+      <div class="col col-12 align-items-center">
         <div class="section-title text-right">
           <h2 style="font-size: 20px">محصولات</h2>
         </div>
       </div>
-      <div class="col col-6 align-items-center">
-        <div class="section-title text-left">
-          <button routerLink="/home/product" class="buttonall">همه محصولات</button>
-        </div>
-      </div>
+
     </div>
   </div>
-  <div class="blog-sliderowl-carousel mt-4">
-    <owl-carousel-o [options]="customOptions">
-      <ng-template carouselSlide *ngFor="let i of Product ">
-        <div class="product-item">
-          <div class="badge" *ngIf="i['offer']===true">%{{i['offerPercent']}}</div>
-          <div class="badge" *ngIf="i['offer']===false">{{i['topText']}}</div>
 
-          <div class="product-tumb">
-            <img [src]="i['image']" class="product-tumb img"/>
-          </div>
-          <div class="product-details text-right">
-            <div class="d-flex flex-row">
-              <span class="product-catagory mr-auto">{{i['Seller'][0].shopName}}</span>
-              <span class="product-catagory">{{i['subCategory']}} </span>
-            </div>
-            <h4><a href="" style="direction: rtl;font-size: 12px">{{i['title']}}</a></h4>
-            <div class="product-bottom-details">
-              <div class="product-links text-left" (click)="addCart(i,i['Inventory'][0].count)">
-                <!--                <i class="fa fa-cart-arrow-down" style="font-size: 1.5rem"></i>-->
+  <div class="container-fluid mt-3">
+    <div class="best-seller" class="ltr">
+      <owl-carousel-o [options]="customOptions">
+        <ng-template carouselSlide *ngFor="let i of Product">
+          <div class="block-products-carousel__column">
+            <div class="block-products-carousel__cell">
+              <div class="product-card product-card--layout--grid">
+                <div class="product-card__actions-list">
+                  <button [routerLink]="['detail',i['_id']]"
+                          pTooltip="مشاهده جزئیات" tooltipPosition="bottom"
+                          class="product-card__action product-card__action--quickview" type="button">
+                    <svg width="16" height="16">
+                      <g transform="translate(0.000000,16.000000) scale(0.100000,-0.100000)" stroke="none">
+                        <path d="M23 106 l-28 -24 24 -26 c32 -34 80 -35 118 -2 l28 24 -24 26 c-32
+      34 -80 35 -118 2z m82 -26 c0 -18 -6 -26 -23 -28 -24 -4 -38 18 -28 44 3 9 15
+      14 28 12 17 -2 23 -10 23 -28z"/>
+                        <path d="M64 89 c-10 -17 13 -36 27 -22 12 12 4 33 -11 33 -5 0 -12 -5 -16
+      -11z"/>
+                      </g>
+                    </svg>
 
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" style="fill:#EF2B2F;margin-top: 5px " width="20"
-                     height="20" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000"
-                     enable-background="new 0 0 1000 1000" xml:space="preserve">
-<metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
-                  <g><path d="M820.8,561.3c33.7,0,68.8-26.5,78.1-58.9l88.8-311c9.2-32.4-10.7-58.9-44.4-58.9H316.3C316.3,64.8,261.4,10,193.8,10H10v122.5h183.8v520.6c0,50.7,41.1,91.9,91.9,91.9h581.9c33.9,0,61.3-27.4,61.3-61.3c0-33.9-27.4-61.3-61.3-61.3H316.3v-61.3L820.8,561.3L820.8,561.3z M316.3,255h554l-52.5,183.8H316.3V255z M377.5,913.4c0,42.1-34.5,76.6-76.6,76.6h-30.6c-42.1,0-76.6-34.5-76.6-76.6v-30.6c0-42.1,34.5-76.6,76.6-76.6h30.6c42.1,0,76.6,34.5,76.6,76.6V913.4z M928.8,913.4c0,42.1-34.5,76.6-76.6,76.6h-30.6c-42.1,0-76.6-34.5-76.6-76.6v-30.6c0-42.1,34.5-76.6,76.6-76.6h30.6c42.1,0,76.6,34.5,76.6,76.6V913.4z"/></g>
-</svg>
-              </div>
-              <div class="product-price text-right">
-                <div *ngIf="i['offer']">
-                  <small>{{i['price']|number}}</small>
-                  <b>{{i['price'] - (i['price'] * i['offerPercent']) / 100|number}}</b> <span style="font-size: 12px"> تومان</span>
+                  </button>
+                  <button (click)="addToWishList(i._id)" class="product-card__action product-card__action--wishlist"
+                          pTooltip="افزودن به لیست علاقه مندی ها" tooltipPosition="bottom"
+                          type="button">
+                    <svg width="16" height="16">
+                      <path
+                        d="M13.9,8.4l-5.4,5.4c-0.3,0.3-0.7,0.3-1,0L2.1,8.4c-1.5-1.5-1.5-3.8,0-5.3C2.8,2.4,3.8,2,4.8,2s1.9,0.4,2.6,1.1L8,3.7l0.6-0.6C9.3,2.4,10.3,2,11.3,2c1,0,1.9,0.4,2.6,1.1C15.4,4.6,15.4,6.9,13.9,8.4z"></path>
+                    </svg>
+                  </button>
+                  <button class="product-card__action product-card__action--compare"
+                          type="button"
+                          pTooltip="افزودن به لیست مقایسه" tooltipPosition="bottom">
+                    <svg width="16" height="16">
+                      <path
+                        d="M9,15H7c-0.6,0-1-0.4-1-1V2c0-0.6,0.4-1,1-1h2c0.6,0,1,0.4,1,1v12C10,14.6,9.6,15,9,15z"></path>
+                      <path d="M1,9h2c0.6,0,1,0.4,1,1v4c0,0.6-0.4,1-1,1H1c-0.6,0-1-0.4-1-1v-4C0,9.4,0.4,9,1,9z"></path>
+                      <path
+                        d="M15,5h-2c-0.6,0-1,0.4-1,1v8c0,0.6,0.4,1,1,1h2c0.6,0,1-0.4,1-1V6C16,5.4,15.6,5,15,5z"></path>
+                    </svg>
+                  </button>                </div>
+                <div class="product-card__image">
+                  <div class="image image--type--product">
+                    <img class="image__tag" [src]="i['image']" alt="">
+                  </div>
                 </div>
+                <div class="product-card__info text-right">
+                  <div class="product-card__meta">
+                    <div class="d-flex flex-row">
+                      <span class="product-catagory mr-auto">{{i['Seller'][0].shopName}}</span>
+                      <span class="product-catagory">{{i['subCategory']}} </span>
+                    </div>
+                  </div>
+                  <div class="product-card__name">
+                    <div>
+                      <div class="product-card__badges" *ngIf="i['offer']===true">
+                        <div class="tag-badge tag-badge--sale">%{{i['offerPercent']}}</div>
+                      </div>
+                      <a class="product-title" [routerLink]="['detail',i['_id']]">{{i['title']}}</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="product-card__footer">
+                  <button class="product-card__addtocart-icon" type="button"
+                          pTooltip="افزودن به سبد خرید" tooltipPosition="bottom"
+                          (click)="addCart(i,i['Inventory'][0].count)">                    <svg width="20" height="20">
+                      <circle cx="7" cy="17" r="2"></circle>
+                      <circle cx="15" cy="17" r="2"></circle>
+                      <path d="M20,4.4V5l-1.8,6.3c-0.1,0.4-0.5,0.7-1,0.7H6.7c-0.4,0-0.8-0.3-1-0.7L3.3,3.9C3.1,3.3,2.6,3,2.1,3H0.4C0.2,3,0,2.8,0,2.6
+	V1.4C0,1.2,0.2,1,0.4,1h2.5c1,0,1.8,0.6,2.1,1.6L5.1,3l2.3,6.8c0,0.1,0.2,0.2,0.3,0.2h8.6c0.1,0,0.3-0.1,0.3-0.2l1.3-4.4
+	C17.9,5.2,17.7,5,17.5,5H9.4C9.2,5,9,4.8,9,4.6V3.4C9,3.2,9.2,3,9.4,3h9.2C19.4,3,20,3.6,20,4.4z"></path>
+                    </svg>
+                  </button>
 
-              </div>
-              <div *ngIf="!i['offer']">
-                <b>تومان{{i['price']|number}} </b>
+                  <div class="product-card__prices">
+                    <div class="product-card__price product-card__price--old">
+                      {{i['price']|number}}
+                    </div>
+                    <div class="product-card__price product-card__price--new">
+                      {{i['price']-(i['price']*i['offerPercent'])/100|number}}  تومان
+                    </div>
+                  </div>
 
-              </div>
 
-
-            </div>
-            <div class="product-bottom-details mt-3">
-              <div class="button text-center w-100">
-                <button [routerLink]="['detail',i['_id']]">مشاهده جزئیات</button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </ng-template>
-    </owl-carousel-o>
+        </ng-template>
+      </owl-carousel-o>
+    </div>
   </div>
+
 </section>
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)"
              size = "large"
              color = "#fff"
              type = "ball-fussion"
              [fullScreen] = "true">
-  <p style="color: white" >منتظر بمانید ... </p>
+  <p style="color: white" >منتظر بمانید</p>
 </ngx-spinner>
