--- a/src/app/Layout/offers/offers.component.html
+++ b/src/app/Layout/offers/offers.component.html
@@ -3,10 +3,10 @@
     <div class="col-md-12 col-sm-12 mb-1">
       <owl-carousel-o [options]="customOptions" dir="ltr" style="border-radius: 10px">
         <ng-template carouselSlide>
-      <img src="./assets/bootstrap/img/banner/offer1.png" style="border-radius: 5px;width: 100%"/>
+      <img src="./assets/bootstrap/img/banner/offer1.png" style="border-radius: 5px;width: 100%;min-height: 150px"/>
         </ng-template>
         <ng-template carouselSlide>
-          <img src="./assets/bootstrap/img/banner/offer2.png" style="border-radius: 5px;width: 100%"/>
+          <img src="./assets/bootstrap/img/banner/offer2.png" style="border-radius: 5px;width: 100%;min-height: 150px"/>
         </ng-template>
       </owl-carousel-o>
     </div>
