--- a/src/app/Layout/seller/seller-header/seller-header.component.html
+++ b/src/app/Layout/seller/seller-header/seller-header.component.html
@@ -1,9 +1,11 @@
 <nav class="site-nav text-right" dir="rtl">
   <div class="container">
     <div class="site-navigation">
-      <a routerLink="/" class="logo">begheymat.com</a>
+      <a routerLink="/" class="logo">
+        <img height="35px" class="ml-3"  src="./assets/bootstrap/img/svg/logo-wh.svg" >
+      </a>
       <ul class="d-none d-lg-inline-block text-left site-menu">
-        <li class="cta-button ml-3 mr-3"><a routerLink="/sellerBe">راهنمای ثبت نام</a></li>
+        <li class="cta-button ml-3 mr-5"><a routerLink="/sellerBe">راهنمای ثبت نام</a></li>
         <li class="cta-button ml-3"><a routerLink="/sellerBe">آموزش پنل فروشندگان</a></li>
         <li class="cta-button ml-3"><a routerLink="/sellerBe/login">ورود به پنل فروشندگان</a></li>
       </ul>
@@ -25,7 +27,7 @@
     <div class="row align-items-center justify-content-between pt-sm-only">
       <div class="col-sm-12 col-lg-6 intro text-right">
         <h1 class="text-white font-weight-bold mb-4">
-          در به قیمت
+          در <b style="font-size: larger">' به قیمت '</b>
           فروشنده شو
         </h1>
         <p class="text-white mb-4">
