--- a/src/app/Layout/subscription/subscription.component.html
+++ b/src/app/Layout/subscription/subscription.component.html
@@ -1,64 +1,89 @@
 <p-toast [baseZIndex]="999999999" dir="rtl" position="center" class="text-right"></p-toast>
 
 <div class="container-fluid mt-2 gift-container py-4" dir="rtl">
-  <!--  <form [formGroup]="emailForm">-->
-  <div class="row justify-content-center gift-bg py-3">
-    <div class="col-8 align-items-center">
-      <!--      <form [formGroup]="mobileForm">-->
+  <div class="row gift-bg py-3">
+    <div class="col-sm-12 col-md-10">
       <div class="row justify-content-center">
         <div class="col-12 title align-items-center">
           <h3 class="text-white text-center">
             برای اطلاع از آخرین تخفیف‌ها و جدیدترین کالا‌ها در خبرنامه ثبت‌نام کنید.
           </h3>
         </div>
-        <form (ngSubmit)="regEmailNewsletter()" [formGroup]="emailForm" >
-          <div class="col-sm-12 align-items-center mt-2">
-            <input class="form-control w-100"
-                   formControlName="email"
-                   maxlength="500"
-                   name="email" pInputText
-                   placeholder="عضویت با پست الکترونیکی" required>
-            <ul class="mt-1 text-right list-inline" *ngFor="let error of emailErrorMessages.email">
-              <li class="font-small text-danger font-weight-bold list-inline-item"
-                  *ngIf="emailForm.get('email').hasError(error.type)
-                            && (emailForm.get('email').dirty
-                            || emailForm.get('email').touched)">
-                {{ error.message }}
-              </li>
-            </ul>
-          </div>
-          <div class="col-sm-12 align-items-center d-block text-center mt-2">
-            <button class="button" [disabled]="emailForm.invalid">عضویت با پست الکترونیکی</button>
-          </div>
-        </form>
-        <form (ngSubmit)="regSmsNewsletter()" [formGroup]="mobileForm" >
-          <div class="col-sm-12 align-items-center mt-2">
-            <input pKeyFilter="int" class="form-control w-100"
-                   formControlName="mobile"
-                   maxlength="11"
-                   minlength="11"
-                   name="mobile" pInputText
-                   placeholder="عضویت با شماره موبایل" required>
-
-            <ul class="mt-1 text-right list-inline" *ngFor="let error of mobileErrorMessages.mobile">
-              <li class="font-small text-danger font-weight-bold list-inline-item"
-                  *ngIf="mobileForm.get('mobile').hasError(error.type)
-                            && (mobileForm.get('mobile').dirty
-                            || mobileForm.get('mobile').touched)">
-                {{ error.message }}
-              </li>
-            </ul>
-          </div>
-          <div class="col-sm-12 align-items-center d-block text-center mt-2">
-            <button class="button" [disabled]="mobileForm.invalid">عضویت با موبایل</button>
-          </div>
-        </form>
 
       </div>
-      <!--      </form>-->
+      <div class="row">
+        <div class="col-sm-12 col-md-6 title">
+          <form (ngSubmit)="regEmailNewsletter()" [formGroup]="emailForm">
+            <div class="row">
+              <div class="col-sm-12" dir="rtl">
+                <div class="p-inputgroup">
+                  <button type="button" pButton pRipple class="button w-25" [disabled]="emailForm.invalid" label="عضویت"></button>
+                  <input class="form-control w-100"
+                         formControlName="email"
+                         maxlength="500"
+                         name="email" pInputText
+                         placeholder="عضویت با پست الکترونیکی" required>
+                </div>
+                <ul class="mt-1 text-right list-inline" *ngFor="let error of emailErrorMessages.email">
+                  <li class="font-small text-danger font-weight-bold list-inline-item"
+                      *ngIf="emailForm.get('email').hasError(error.type)
+                            && (emailForm.get('email').dirty
+                            || emailForm.get('email').touched)">
+                    {{ error.message }}
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-sm-12 col-md-6 title">
+          <form (ngSubmit)="regSmsNewsletter()" [formGroup]="mobileForm">
+            <div class="row">
+              <div class="col-sm-12" dir="rtl">
+                <div class="p-inputgroup">
+                  <button type="button" class="button w-25" pButton pRipple [disabled]="mobileForm.invalid" label="عضویت"></button>
+                  <input pKeyFilter="int" class="form-control w-100"
+                         formControlName="mobile"
+                         maxlength="11"
+                         minlength="11"
+                         name="mobile" pInputText
+                         placeholder="عضویت با شماره موبایل" required>
+                </div>
+                <ul class="mt-1 text-right list-inline" *ngFor="let error of mobileErrorMessages.mobile">
+                  <li class="font-small text-danger font-weight-bold list-inline-item"
+                      *ngIf="mobileForm.get('mobile').hasError(error.type)
+                            && (mobileForm.get('mobile').dirty
+                            || mobileForm.get('mobile').touched)">
+                    {{ error.message }}
+                  </li>
+                </ul>
+              </div>
+<!--              <div class="col-sm-12 col-md-8">-->
+<!--                <input pKeyFilter="int" class="form-control w-100"-->
+<!--                       formControlName="mobile"-->
+<!--                       maxlength="11"-->
+<!--                       minlength="11"-->
+<!--                       name="mobile" pInputText-->
+<!--                       placeholder="عضویت با شماره موبایل" required>-->
+
+<!--                <ul class="mt-1 text-right list-inline" *ngFor="let error of mobileErrorMessages.mobile">-->
+<!--                  <li class="font-small text-danger font-weight-bold list-inline-item"-->
+<!--                      *ngIf="mobileForm.get('mobile').hasError(error.type)-->
+<!--                            && (mobileForm.get('mobile').dirty-->
+<!--                            || mobileForm.get('mobile').touched)">-->
+<!--                    {{ error.message }}-->
+<!--                  </li>-->
+<!--                </ul>-->
+<!--              </div>-->
+<!--              <div class="col-sm-12 col-md-4">-->
+<!--                <button class="button btn-block" [disabled]="mobileForm.invalid">عضویت با موبایل</button>-->
+<!--              </div>-->
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
-  <!--  </form>-->
 </div>
 <p-dialog [(visible)]="displayError" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
   <p-header>
