--- a/src/app/SharedComponent/footer/footer.component.html
+++ b/src/app/SharedComponent/footer/footer.component.html
@@ -1,8 +1,8 @@
 <!-- Footer -->
 <footer class="page-footer font-small mt-3" dir="rtl">
-  <div style="background-color: #EF2B2F" >
-    <div class="container" style="padding-top: 3px">
-      <div class="row pb-4 pt-2 justify-content-center">
+  <div style="background-color: #CC3333" >
+    <div class="container">
+      <div class="row py-3 justify-content-center">
         <div class="col-12 align-items-center text-center">
           <a class="fb-ic">
             <i class="fab fa-lg fa-facebook-f white-text"> </i>
