--- a/src/app/Layout/best-selling/best-selling.component.html
+++ b/src/app/Layout/best-selling/best-selling.component.html
@@ -1,14 +1,17 @@
-<p-dialog  [(visible)]="displayBasic" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
+<p-dialog [(visible)]="displayBasic" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
   <p-header>
-    <p  class="mr-3">انجام شد</p>
+    <p class="mr-3">انجام شد</p>
   </p-header>
   <hr style="width: 100%;"/>
   <p class="text-right text-success mt-2">محصول با موفقیت به سبد خرید اضافه شد</p>
-  <p class="text-right textDialog">برای ثبت نهایی سفارش بر روی دکمه ی مشاهده  سبد خرید کلیک کنید و برای افزودن دیگر محصولات به سبد خرید، بر روی دکمه ی ادامه کلیک کنید.</p>
+  <p class="text-right textDialog">برای ثبت نهایی سفارش بر روی دکمه ی مشاهده سبد خرید کلیک کنید و برای افزودن دیگر
+    محصولات به سبد خرید، بر روی دکمه ی ادامه کلیک کنید.</p>
   <hr style="margin-bottom: -15px"/>
-  <ng-template pTemplate="footer" >
-    <button pButton pRipple type="button"  (click)="displayBasic=false" label="ادامه"  class="p-button-danger float-left"></button>
-    <button pButton pRipple type="button"  (click)="displayBasic=false" label="مشاهده سبد خرید"  class="p-button-danger float-left" routerLink="cart"></button>
+  <ng-template pTemplate="footer">
+    <button pButton pRipple type="button" (click)="displayBasic=false" label="ادامه"
+            class="p-button-danger float-left"></button>
+    <button pButton pRipple type="button" (click)="displayBasic=false" label="مشاهده سبد خرید"
+            class="p-button-danger float-left" routerLink="cart"></button>
 
   </ng-template>
 </p-dialog>
@@ -31,20 +34,31 @@
             <div class="block-products-carousel__cell">
               <div class="product-card product-card--layout--grid">
                 <div class="product-card__actions-list">
-                  <button class="product-card__action product-card__action--quickview" type="button"
-                          aria-label="Quick view">
+                  <button [routerLink]="['detail',i['_id']]"
+                          pTooltip="مشاهده جزئیات" tooltipPosition="bottom"
+                          class="product-card__action product-card__action--quickview" type="button">
                     <svg width="16" height="16">
-                      <path d="M14,15h-4v-2h3v-3h2v4C15,14.6,14.6,15,14,15z M13,3h-3V1h4c0.6,0,1,0.4,1,1v4h-2V3z M6,3H3v3H1V2c0-0.6,0.4-1,1-1h4V3zM3,13h3v2H2c-0.6,0-1-0.4-1-1v-4h2V13z"></path>
+                      <g transform="translate(0.000000,16.000000) scale(0.100000,-0.100000)" stroke="none">
+                        <path d="M23 106 l-28 -24 24 -26 c32 -34 80 -35 118 -2 l28 24 -24 26 c-32
+      34 -80 35 -118 2z m82 -26 c0 -18 -6 -26 -23 -28 -24 -4 -38 18 -28 44 3 9 15
+      14 28 12 17 -2 23 -10 23 -28z"/>
+                        <path d="M64 89 c-10 -17 13 -36 27 -22 12 12 4 33 -11 33 -5 0 -12 -5 -16
+      -11z"/>
+                      </g>
+                    </svg>
+
+                  </button>
+                  <button (click)="addToWishList(i._id)" class="product-card__action product-card__action--wishlist"
+                          pTooltip="افزودن به لیست علاقه مندی ها" tooltipPosition="bottom"
+                          type="button">
+                    <svg width="16" height="16">
+                      <path
+                        d="M13.9,8.4l-5.4,5.4c-0.3,0.3-0.7,0.3-1,0L2.1,8.4c-1.5-1.5-1.5-3.8,0-5.3C2.8,2.4,3.8,2,4.8,2s1.9,0.4,2.6,1.1L8,3.7l0.6-0.6C9.3,2.4,10.3,2,11.3,2c1,0,1.9,0.4,2.6,1.1C15.4,4.6,15.4,6.9,13.9,8.4z"></path>
                     </svg>
                   </button>
-                  <button (click)="addToWishList(i._id)" class="product-card__action product-card__action--wishlist" type="button"
-                          aria-label="Add to wish list">
-                    <svg width="16" height="16">
-                      <path d="M13.9,8.4l-5.4,5.4c-0.3,0.3-0.7,0.3-1,0L2.1,8.4c-1.5-1.5-1.5-3.8,0-5.3C2.8,2.4,3.8,2,4.8,2s1.9,0.4,2.6,1.1L8,3.7l0.6-0.6C9.3,2.4,10.3,2,11.3,2c1,0,1.9,0.4,2.6,1.1C15.4,4.6,15.4,6.9,13.9,8.4z"></path>
-                    </svg>
-                  </button>
-                  <button class="product-card__action product-card__action--compare" type="button"
-                          aria-label="Add to compare">
+                  <button class="product-card__action product-card__action--compare"
+                          type="button"
+                          pTooltip="افزودن به لیست مقایسه" tooltipPosition="bottom">
                     <svg width="16" height="16">
                       <path
                         d="M9,15H7c-0.6,0-1-0.4-1-1V2c0-0.6,0.4-1,1-1h2c0.6,0,1,0.4,1,1v12C10,14.6,9.6,15,9,15z"></path>
@@ -56,9 +70,9 @@
                 </div>
                 <div class="product-card__image">
                   <div class="image image--type--product">
-                    <a [routerLink]="['detail',i['_id']]" class="image__body">
-                      <img class="image__tag" [src]="i['image']" alt="">
-                    </a>
+                    <!--                    <a [routerLink]="['detail',i['_id']]" class="image__body">-->
+                    <img class="image__tag" [src]="i['image']" alt="">
+                    <!--                    </a>-->
                   </div>
                 </div>
                 <div class="product-card__info text-right">
@@ -74,12 +88,14 @@
                       <div class="product-card__badges" *ngIf="i['offer']===true">
                         <div class="tag-badge tag-badge--sale">%{{i['offerPercent']}}</div>
                       </div>
-                      <a>{{i['title']}}</a>
+                      <a class="product-title" [routerLink]="['detail',i['_id']]">{{i['title']}}</a>
                     </div>
                   </div>
                 </div>
                 <div class="product-card__footer">
-                  <button class="product-card__addtocart-icon" type="button" aria-label="Add to cart" (click)="addCart(i,i['Inventory'][0].count)">
+                  <button class="product-card__addtocart-icon" type="button"
+                          pTooltip="افزودن به سبد خرید" tooltipPosition="bottom"
+                          (click)="addCart(i,i['Inventory'][0].count)">
                     <svg width="20" height="20">
                       <circle cx="7" cy="17" r="2"></circle>
                       <circle cx="15" cy="17" r="2"></circle>
@@ -94,7 +110,7 @@
                       {{i['price']|number}}
                     </div>
                     <div class="product-card__price product-card__price--new">
-                      {{i['price']-(i['price']*i['offerPercent'])/100|number}}  تومان
+                      {{i['price'] - (i['price'] * i['offerPercent']) / 100|number}}  تومان
                     </div>
                   </div>
 
@@ -108,10 +124,10 @@
     </div>
   </div>
 </section>
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)"
-             size = "large"
-             color = "#fff"
-             type = "ball-fussion"
-             [fullScreen] = "true">
-  <p style="color: white" >منتظر بمانید ... </p>
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)"
+             size="large"
+             color="#fff"
+             type="ball-fussion"
+             [fullScreen]="true">
+  <p style="color: white">منتظر بمانید</p>
 </ngx-spinner>
