--- a/src/app/Layout/all-products/all-products.component.html
+++ b/src/app/Layout/all-products/all-products.component.html
@@ -28,12 +28,16 @@
 <section class="card-box mt-3">
   <div class="container-fluid" dir="rtl">
     <div class="row justify-content-center">
-      <div class="col col-12 align-items-center">
+      <div class="col col-6 align-items-center">
         <div class="section-title text-right">
           <h2 style="font-size: 20px">محصولات</h2>
         </div>
       </div>
-
+      <div class="col col-6 align-items-center">
+        <div class="section-title text-left">
+          <button routerLink="/home/product" class="buttonall">همه محصولات</button>
+        </div>
+      </div>
     </div>
   </div>
 
