--- a/src/app/Layout/slider/slider.component.html
+++ b/src/app/Layout/slider/slider.component.html
@@ -33,6 +33,9 @@
         <ng-template carouselSlide>
           <img src="./assets/bootstrap/img/banner/banner9.png" alt="first slide" class="slider-image">
         </ng-template>
+        <ng-template carouselSlide>
+          <img src="./assets/bootstrap/img/banner/banner10.png" alt="first slide" class="slider-image">
+        </ng-template>
       </owl-carousel-o>
       <!--    <carousel style="border-radius: 20px">-->
       <!--      <slide>-->
